HZN-549: Introduce vaadin-core module for shared vaadin components.